--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
         /* 模块配置 */
         "modules" : {
             "VideoPlayer" : {},
-            "UIWebview" : {}
+            "UIWebview" : {},
+            "OAuth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -60,7 +61,8 @@
             "sdkConfigs" : {
                 "ad" : {
                     "csj" : {}
-                }
+                },
+                "oauth" : {}
             }
         }
     },
