--- a/manifest.json
+++ b/manifest.json
@@ -1,106 +1,109 @@
 {
-    "name" : "等会er短视频",
-    "appid" : "__UNI__358F37A",
-    "description" : "等会er短视频",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
-    "transformPx" : false,
-    /* 5+App特有相关 */
-    "app-plus" : {
-        "usingComponents" : true,
-        "compilerVersion" : 3,
-        /* 模块配置 */
-        "modules" : {
-            "VideoPlayer" : {},
-            "UIWebview" : {},
-            "OAuth" : {}
-        },
-        /* 应用发布信息 */
-        "distribute" : {
-            /* android打包配置 */
-            "android" : {
-                "permissions" : [
-                    "<uses-feature android:name=\"android.hardware.camera\"/>",
-                    "<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
-                    "<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
-                    "<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
-                    "<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
-                    "<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
-                    "<uses-permission android:name=\"android.permission.ADD_VOICEMAIL\"/>",
-                    "<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
-                    "<uses-permission android:name=\"android.permission.CAMERA\"/>",
-                    "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
-                    "<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
-                    "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
-                    "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
-                    "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
-                    "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
-                    "<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
-                    "<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
-                    "<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
-                    "<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
-                    "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
-                    "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
-                ],
-                "permissionPhoneState" : {
-                    "request" : "always",
-                    "prompt" : "为保证您正常、安全地使用，需要获取设备识别码（部分手机提示为获取手机号码）使用权限，请允许。"
-                }
-            },
-            /* ios打包配置 */
-            "ios" : {
-                "privacyDescription" : {
-                    "NSLocationWhenInUseUsageDescription" : "为了精准推送您喜欢的信息",
-                    "NSLocationAlwaysUsageDescription" : "为了精准推送您喜欢的信息",
-                    "NSLocationAlwaysAndWhenInUseUsageDescription" : "为了精准推送您喜欢的信息"
-                }
-            },
-            /* SDK配置 */
-            "sdkConfigs" : {
-                "ad" : {
-                    "csj" : {}
-                },
-                "oauth" : {}
-            }
-        }
-    },
-    /* 快应用特有相关 */
-    "quickapp" : {},
-    /* 小程序特有相关 */
-    "mp-weixin" : {
-        "appid" : "",
-        "setting" : {
-            "urlCheck" : false
-        },
-        "usingComponents" : true
-    },
-    "mp-alipay" : {
-        "usingComponents" : true
-    },
-    "mp-baidu" : {
-        "usingComponents" : true
-    },
-    "mp-toutiao" : {
-        "usingComponents" : true
-    },
-    "h5" : {
-        "title" : "等会er短视频",
-        "router" : {
-            "mode" : "hash",
-            "base" : "/user"
-        },
-        "devServer" : {
-            "port" : 8010,
-			"disableHostCheck" : true,
-			"proxy" : {
-				"/care-web" : {
-					"target" : "http://8.210.169.146", //目标接口域名
-					"changeOrigin" : true,  //是否跨域
-					"secure" : false  // 设置支持https协议的代理
+	"name": "等会er短视频",
+	"appid": "__UNI__358F37A",
+	"description": "等会er短视频",
+	"versionName": "1.0.0",
+	"versionCode": "100",
+	"transformPx": false,
+	/* 5+App特有相关 */
+	"app-plus": {
+		"usingComponents": true,
+		"compilerVersion": 3,
+		/* 模块配置 */
+		"modules": {
+			"VideoPlayer": {},
+			"UIWebview": {},
+			"OAuth": {}
+		},
+		/* 应用发布信息 */
+		"distribute": {
+			/* android打包配置 */
+			"android": {
+				"permissions": [
+					"<uses-feature android:name=\"android.hardware.camera\"/>",
+					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.ADD_VOICEMAIL\"/>",
+					"<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
+					"<uses-permission android:name=\"android.permission.CAMERA\"/>",
+					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
+					"<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
+					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
+					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
+					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
+					"<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
+					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
+					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
+					"<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+				],
+				"permissionPhoneState": {
+					"request": "always",
+					"prompt": "为保证您正常、安全地使用，需要获取设备识别码（部分手机提示为获取手机号码）使用权限，请允许。"
+				}
+			},
+			/* ios打包配置 */
+			"ios": {
+				"privacyDescription": {
+					"NSLocationWhenInUseUsageDescription": "为了精准推送您喜欢的信息",
+					"NSLocationAlwaysUsageDescription": "为了精准推送您喜欢的信息",
+					"NSLocationAlwaysAndWhenInUseUsageDescription": "为了精准推送您喜欢的信息"
+				}
+			},
+			/* SDK配置 */
+			"sdkConfigs": {
+				"ad": {
+					"csj": {}
+				},
+				"oauth": {}
+			}
+		}
+	},
+	/* 快应用特有相关 */
+	"quickapp": {},
+	/* 小程序特有相关 */
+	"mp-weixin": {
+		"appid": "",
+		"setting": {
+			"urlCheck": false
+		},
+		"usingComponents": true
+	},
+	"mp-alipay": {
+		"usingComponents": true
+	},
+	"mp-baidu": {
+		"usingComponents": true
+	},
+	"mp-toutiao": {
+		"usingComponents": true
+	},
+	"h5": {
+		"title": "等会er短视频",
+		"router": {
+			"mode": "hash",
+			"base": "/user"
+		},
+		"devServer": {
+			"port": 8010,
+			"disableHostCheck": true,
+			"proxy": {
+				"/user": {
+					"target": "http://8.210.169.146", //目标接口域名
+					"changeOrigin": true, //是否跨域
+					"secure": false, // 设置支持https协议的代理
+					"pathRewrite": { //使用代理； 告诉他你这个连接要用代理
+						"^/user": ""
+					}
 				}
 			}
-        }
-    }
+		}
+	}
 }
