--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "等会er短视频",
-    "appid" : "__UNI__A2B3BA9",
+    "appid" : "__UNI__98E9DE2",
     "description" : "等会er短视频",
     "versionName" : "1.0.0",
     "versionCode" : "100",
